update template ui admin

--- a/src/main/resources/views/clients/index.html
+++ b/src/main/resources/views/clients/index.html
@@ -1,6 +1,5 @@
 <div th:replace="~{layouts/main-layout :: layout('Trang chủ - Spring Boot Shop', ~{::content})}">
   <div th:fragment="content">
-    <div></div>
 
     <!-- Features Banner -->
     <div class="bg-white border-t border-orange-300">
@@ -278,7 +277,7 @@
       </div>
 
       <!-- Customer Reviews Section -->
-      <div class="bg-[#fcf6f5] py-8 border-y border-[#fdba74]">
+      <div class="bg-[#fcf6f5] py-8 border-y border-gray-300">
         <div class="container mx-auto px-4">
           <!-- Section Title -->
           <div class="text-center">
